; ModuleID = '/home/carl/AnghaBench/libuv/src/unix/extr_proctitle.c_uv_set_process_title.c'
source_filename = "/home/carl/AnghaBench/libuv/src/unix/extr_proctitle.c_uv_set_process_title.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@process_title_mutex_once = common dso_local global i32 0, align 4
@init_process_title_mutex_once = common dso_local global i32 0, align 4
@process_title_mutex = common dso_local global i32 0, align 4
@process_title = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_set_process_title(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @init_process_title_mutex_once, align 4
  %4 = call i32 @uv_once(i32* @process_title_mutex_once, i32 %3)
  %5 = call i32 @uv_mutex_lock(i32* @process_title_mutex)
  %6 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @process_title, i32 0, i32 0), align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %1
  %9 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @process_title, i32 0, i32 1), align 8
  %10 = load i8*, i8** %2, align 8
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @process_title, i32 0, i32 0), align 8
  %12 = call i32 @strncpy(i32 %9, i8* %10, i64 %11)
  %13 = load i8*, i8** %2, align 8
  %14 = call i32 @uv__set_process_title(i8* %13)
  br label %15

15:                                               ; preds = %8, %1
  %16 = call i32 @uv_mutex_unlock(i32* @process_title_mutex)
  ret i32 0
}

declare dso_local i32 @uv_once(i32*, i32) #1

declare dso_local i32 @uv_mutex_lock(i32*) #1

declare dso_local i32 @strncpy(i32, i8*, i64) #1

declare dso_local i32 @uv__set_process_title(i8*) #1

declare dso_local i32 @uv_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
